--- a/binary_translator/code/Makefile
+++ b/binary_translator/code/Makefile
@@ -3,7 +3,7 @@ CC=g++
 CFLAGS=-c 
 IFLAGS=-I../../
 
-SOURCES=main.cpp IR-parser.cpp translator.cpp input_output.cpp
+SOURCES=main.cpp IR-parser.cpp translator.cpp input_output.cpp executable_utils.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 
 EXECUTABLE=../../trollator
